# BixBrother

./: .gitignore  README.md  build.gradle.kts  settings.gradle.kts
app/: build.gradle.kts  google-services.json
app/src/androidTest/java/bzh/edgar/bixbrother/: ExampleInstrumentedTest.kt
app/src/debug/: AndroidManifest.xml
app/src/debug/res/values/: strings.xml
app/src/main/: AndroidManifest.xml
app/src/main/java/bzh/edgar/bixbrother/: ActiveEntryAdapter.kt  ActiveEntryCallback.kt  BixApplication.kt  BixClient.kt  BixWidget.kt  db.kt  (+8 more)
app/src/main/res/drawable/: ic_bike_dock.xml  ic_electric_bike.xml  ic_launcher_background.xml  ic_launcher_foreground.xml  ic_launcher_monochrome.xml  ic_qr_code.xml  ic_qr_code_20dp.xml
app/src/main/res/layout/: bix_widget.xml  bix_widget_item.xml  main_activity.xml  widget_configure_activity.xml  widget_configure_entry.xml  widget_configure_search_entry.xml  widget_configure_search_header.xml
app/src/main/res/layout-v31/: bix_widget_preview.xml
app/src/main/res/menu/: search_entry.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/values-fr/: strings.xml
app/src/main/res/values-night-v31/: colors.xml
app/src/main/res/values-v31/: colors.xml
app/src/main/res/xml/: backup_rules.xml  bix_widget_info.xml
app/src/main/res/xml-v28/: bix_widget_info.xml
app/src/main/res/xml-v31/: bix_widget_info.xml
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
server/: .gitignore  Cargo.toml
server/src/: fcm.rs  gbfs.rs  main.rs  stations_collection.rs  thumbnailer.rs
(+1 files in other folders)
