[package]
name = "bixbrother"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.41"
duct = "1.0.0"
eyre = "0.6.12"
google-fcm1 = "6.0.0"
log = "0.4.27"
reqwest = { version = "0.12.22", features = ["json"] }
rocket = { version = "0.5.1", default-features = false, features = ["json", "uuid"] }
rustls = { version = "0.23.28", default-features = false }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.46.1", features = ["rt", "rt-multi-thread", "macros"] }
uuid = { version = "1.17.0", features = ["serde"] }
hyper-util = "0.1.15"
hyper-rustls = { version = "0.27.7", default-features = false, features = ["ring"] }

[profile.release]
lto = true
